--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,5 +6,30 @@
     android:layout_height="match_parent"
     tools:context=".activities.MainActivity">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize">
+
+        <ImageView
+            android:id="@+id/iv_my_location"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:src="@drawable/baseline_my_location_24"
+            android:layout_marginRight="8dp"/>
+        <EditText
+            android:id="@+id/et_search"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/bg_login_btn"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:hint="검색어 입력"
+            android:inputType="text"
+            android:textSize="12sp"
+            android:gravity="center"
+            android:imeOptions="actionSearch"/>
+
+    </androidx.appcompat.widget.Toolbar>
 
 </RelativeLayout>
