--- a/app/src/main/res/layout/fragment_place_map.xml
+++ b/app/src/main/res/layout/fragment_place_map.xml
@@ -3,10 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="MAP" />
+    <!--카카오 MapView가 놓여질 컨테이너용 ViewGroup-->
+    <RelativeLayout
+        android:id="@+id/container_mapview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </RelativeLayout>
